[gd_scene load_steps=21 format=2]

[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://DatabaseCore/CharacterData/Reimu.tres" type="Resource" id=2]
[ext_resource path="res://Lib/FJ_LibHelper/PlatformBehavior2D/PlatformBehavior2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Misc/PlatformerSprite/PlatformerSprite.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sprites/Effects/Damage.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Init"
tracks/0/type = "value"
tracks/0/path = NodePath("..:CURRENT_PALETTE_STATE")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Lv1"
length = 0.06
loop = true
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("..:CURRENT_PALETTE_STATE")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Lv2"
length = 0.06
loop = true
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("..:CURRENT_PALETTE_STATE")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Lv3"
length = 0.06
loop = true
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("..:CURRENT_PALETTE_STATE")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Lv4"
length = 0.09
loop = true
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("..:CURRENT_PALETTE_STATE")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03, 0.06 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Charging"
length = 1.6
step = 0.33
tracks/0/type = "value"
tracks/0/path = NodePath(".:current_animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.33, 0.66 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 2,
"values": [ "Lv1", "Lv2", "Lv3" ]
}

[sub_resource type="Animation" id=7]
resource_name = "FullyCharged"
tracks/0/type = "value"
tracks/0/path = NodePath(".:current_animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ "Lv4" ]
}

[sub_resource type="Animation" id=17]
resource_name = "TeleportIn"
length = 1.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.05, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 604, 605, 604, 606 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -512 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../PlatformBehavior:INITIAL_STATE")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:animation_paused")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("..")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play_teleport_in_sound"
} ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 5, 10 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 6 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 6, 10 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 6 )

[sub_resource type="Animation" id=12]
length = 0.06
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PlatformerSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=13]
length = 0.06
loop = true
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.03 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
collision_layer = 2
collision_mask = 65
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
player_character_data_res = ExtResource( 2 )

[node name="PlatformBehavior" parent="." instance=ExtResource( 3 )]
WALK_SPEED = 77.813
JUMP_SPEED = 320.0
VELOCITY_X_DAMPING = 1.0
MAX_FALL_SPEED = 360.0
INITIAL_STATE = false
USE_TIP_TOE_MOVEMENT = true
DEFAULT_CONTROL_JUMP = ""

[node name="PlatformerSprite" parent="." instance=ExtResource( 4 )]
offset = Vector2( 0, 2 )
frame = 605
path_to_platformer_behavior = NodePath("../PlatformBehavior")
animation_paused = true

[node name="ShootPos" type="Position2D" parent="PlatformerSprite"]
position = Vector2( 20, 0 )

[node name="SlideDustPos" type="Position2D" parent="PlatformerSprite"]
position = Vector2( -8, 11 )

[node name="PaletteAniPlayer" type="AnimationPlayer" parent="PlatformerSprite"]
anims/Init = SubResource( 1 )
anims/Lv1 = SubResource( 2 )
anims/Lv2 = SubResource( 3 )
anims/Lv3 = SubResource( 4 )
anims/Lv4 = SubResource( 5 )

[node name="PaletteAniChanger" type="AnimationPlayer" parent="PlatformerSprite/PaletteAniPlayer"]
anims/Charging = SubResource( 6 )
anims/FullyCharged = SubResource( 7 )

[node name="TeleportPlayer" type="AnimationPlayer" parent="PlatformerSprite"]
autoplay = "TeleportIn"
playback_speed = 0.8
anims/TeleportIn = SubResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 3 )
shape = SubResource( 8 )

[node name="SlideCollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 7 )
shape = SubResource( 9 )
disabled = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="TakingDamageTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=[
"Player",
]]
position = Vector2( 0, 3 )
collision_layer = 2
collision_mask = 60

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 10 )

[node name="SlideCollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4 )
shape = SubResource( 11 )
disabled = true

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/Invincible = SubResource( 12 )

[node name="TransitionTween" type="Tween" parent="."]

[node name="DamageSprite" type="Sprite" parent="."]
editor/display_folded = true
visible = false
texture = ExtResource( 5 )

[node name="Ani" type="AnimationPlayer" parent="DamageSprite"]
pause_mode = 2
anims/Flashing = SubResource( 13 )
anims/StopFlashin = SubResource( 14 )
[connection signal="input_event" from="." to="." method="_on_Player_input_event"]
[connection signal="launched_attack" from="." to="PlatformerSprite" method="start_normal_attack_animation"]
[connection signal="collided" from="PlatformBehavior" to="." method="_on_PlatformerBehavior_collided"]
[connection signal="fell_into_pit" from="PlatformBehavior" to="." method="_on_PlatformerBehavior_fell_into_pit"]
[connection signal="jumped_by_keypress" from="PlatformBehavior" to="." method="_on_PlatformBehavior_jumped_by_keypress"]
[connection signal="landed" from="PlatformBehavior" to="." method="_on_PlatformBehavior_landed"]
[connection signal="timeout" from="TakingDamageTimer" to="." method="_on_TakingDamageTimer_timeout"]
